--- a/static/css/style.less
+++ b/static/css/style.less
@@ -39,9 +39,17 @@
 
 .noStarForRequire>label{
    content: '' !important;
+  //display: inline-block;
+  //font-size: 12px;
  }
 .noStarForRequire>label:before{
   content: '' !important;
+  display: inline-block;
+  margin-right: 4px;
+  line-height: 1;
+  font-family: SimSun;
+  font-size: 12px;
+  color: #ed4014;
 }
 
 
